# telegram-nlp

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  torch-conda-nightly.yml  torch-conda.yml
app/: example.py  main.py  module_test.py  predictor.py  simple_inference.ipynb
app/static/css/: styles.css
app/templates/: form_frame.html  index.html  inference_frame.html
crypto_nlp/: hugging_face_sagemaker_training.ipynb  telegram_data.ipynb  telegram_semantic_search.ipynb  telegram_sentiment_fine_tuning.ipynb  torch_test.ipynb
label-studio/: default_prompt.txt  docker-compose.yml  labelstudio-docker-compose.yml
modules/: semantic_search_generator.py  sentiment_predictor.py
notebooks/: README.md  apis_data.ipynb  hugging_face_sagemaker_training.ipynb  label-studio-setup.ipynb  langchain_qa.ipynb  langchain_rag.ipynb  module_test.ipynb  simple_inference.ipynb  telegram_data.ipynb  telegram_data_fetching.ipynb  telegram_semantic_search.ipynb  telegram_sentiment_fine_tuning_multiclass.ipynb  torch_test.ipynb
notebooks/scripts/: train.py
other/: crypto_websocket_reading.py  datasets_exploring.ipynb
