[tool.poetry]
name = "telegram-nlp"
version = "0.1.0"
description = ""
authors = ["Camilo Ramirez <camilo.ramirez@onlyfy.com>"]
readme = "README.md"
packages = [{include = "telegram-nlp"}]

[tool.poetry.dependencies]
python=">=3.8.1,<3.11"
ipykernel = "^6.25.0"
pandas = "^2.0.3"
telethon = "^1.29.2"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.4"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.14"
tiktoken = "^0.5.1"
label-studio-sdk = "^0.0.32"
langchain = "^0.1.16"
openai = "^1.23.6"
langchain-openai = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
